tp3/pod-yellow.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    app: web
  name: simple-webapp-color-green
  namespace: production
spec:
  containers:
  - env:
    - name: APP_COLOR
      value: green
    image: mmumshad/simple-webapp-color
    name: simple-webapp-color-green
    ports:
    - containerPort: 8080
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
