tp3/service-web-color.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: service-web-color
  name: service-web-color
  namespace: production
spec:
  ports:
  - name: 8080-8080
    nodePort: 30008
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: web
  type: NodePort
